--- a/Qubit.html
+++ b/Qubit.html
@@ -62,22 +62,33 @@
 			<p>
 				A <a href="https://en.wikipedia.org/wiki/Qubit" target="_blank">qubit</a>
 				is just a pair of numbers.
-				That’s all they are—two 
+				That’s it—two 
 				<a href="https://youtu.be/YYOKMUTTDdA" target="_blank">shiny happy number values,
 				holding hands</a>.
-				Traditionally, we use 
-				“<a href="https://en.wikipedia.org/wiki/Bra%E2%80%93ket_notation" target="_blank">bra-ket terminology</a>”
-				to refer to these two numbers—calling
-				the first number 
+				And the numbers have names.
+				If we follow the 
+				“<a href="https://en.wikipedia.org/wiki/Bra%E2%80%93ket_notation" target="_blank">bra-ket naming convention</a>”
+				the first number is called
 				“<code><a href="Qubit.html#this.bra">bra</a></code>” 
-				and the second one 
+				and the second one is called
 				“<code><a href="Qubit.html#this.ket">ket</a></code>.”
-				(I know that sounds a little childish and stupid, but then so is high school.)
+				That may sound a bit strange at first, 
+				but this naming convention is the standard
+				among quantum physicists.
+				We can couple this
+				<code><a href="Qubit.html#this.bra">bra</a></code>
+				and
+				<code><a href="Qubit.html#this.ket">ket</a></code>
+				together
+				by storing them in a very small matrix
+				that is 1 unit wide
+				and 2 units tall.
+				(See <code><a href="Q.html">Q</a>.<a href="Matrix.html">Matrix</a></code> for a refresher on what a matrx is.)
 				So when you think of a qubit you can imagine it as 
 				a 1 × 2 <a href="Matrix.html">matrix</a>
-				containing a 
+				containing its 
 				<code><a href="Qubit.html#this.bra">bra</a></code> value on the top
-				and a 
+				and its
 				<code><a href="Qubit.html#this.ket">ket</a></code> value on the bottom,
 				like so:
 			</p>
@@ -101,7 +112,7 @@
 				<code><a href="Qubit.html#this.bra">bra</a></code>
 				you know the 
 				<code><a href="Qubit.html#this.ket">ket</a></code>.
-				(Or nearly so.)
+				(Or at least what its <a href="https://en.wikipedia.org/wiki/Absolute_value" target="_blank">absolute value</a> is.)
 				For this reason, when we discuss the value of a qubit
 				we often only refer to one of these values instead of both.
 				By convention the value we choose to represent a qubit
@@ -241,7 +252,7 @@
 				You’ve probably heard the term 
 				“<a href="https://en.wikipedia.org/wiki/Quantum_superposition" target="_blank">superposition</a>”—and along with that 
 				you’ve likely been spoonfed some measure of mysticism; 
-				<a href="https://youtu.be/CMdHDHEuOUE">pizza-bagels</a> and whatnot.
+				<a href="https://youtu.be/CMdHDHEuOUE" target="_blank">pizza-bagels</a> and whatnot.
 				In the real, physical world, superposition is indeed weird magic.
 				But in quantum computing it’s dead simple.
 				Superposition is any qubit state other than
@@ -690,13 +701,44 @@ var a = new <a href="Q.html">Q</a>.Qubit( 0, 1 )
 					</dd>
 				</li>
 			</ul>
-			<h4>Self inspection</h4>
+			<h4>Inspection</h4>
 			<ul class="properties">
+
+
+
+				<li>
+					<dt id=".findByKet">findByKet</dt>
+					<dd>
+						<code class="value-type">Function( <a href="Q.html">Q</a>.Qubit ) ⇒ <a href="Q.html">Q</a>.Qubit</code>
+						Description TK.
+					</dd>
+				</li>
+
+				<li>
+					<dt id=".applyGate">applyGate</dt>
+					<dd>
+						<code class="value-type">Function( <a href="Q.html">Q</a>.Qubit ) ⇒ <a href="Q.html">Q</a>.Qubit</code>
+						Description TK.
+					</dd>
+				</li>
+				<li>
+					<dt id=".toText">toText</dt>
+					<dd>
+						<code class="value-type">Function( <a href="Q.html">Q</a>.Qubit ) ⇒ <a href="Q.html">Q</a>.Qubit</code>
+						Description TK.
+					</dd>
+				</li>
+
+
+
+
+
+
+
 				<li>
 					<dt id=".collapse">collapse</dt>
 					<dd>
-						<code class="value-type">Function ⇒ <a href="Q.html">Q</a>.Qubit</code>
-						Expects a single <code>Q.Qubit</code> instance as argument.
+						<code class="value-type">Function( <a href="Q.html">Q</a>.Qubit ) ⇒ <a href="Q.html">Q</a>.Qubit</code>
 						Returns a new <code>Q.Qubit</code> randomly chosen to be either
 						<code>new Qubit( 1, 0 )</code> (<code><a href="#.HORIZONTAL">HORIZONTAL</a></code>)
 						 or
@@ -707,20 +749,22 @@ var a = new <a href="Q.html">Q</a>.Qubit( 0, 1 )
 				<li>
 					<dt id=".areEqual">areEqual</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Expects two instances of <code>Q.Qubit</code> as arguments.
+						<code class="value-type">Function( a: <a href="Q.html">Q</a>.Qubit, b: <a href="Q.html">Q</a>.Qubit ) ⇒ Boolean</code>
 						If the <code><a href="#.bra">bra</a></code> of each are within 
 						<code>Q.<a href="Q.html#.EPSILON">EPSILON</a></code>
 						and the <code><a href="#.ket">ket</code></a> of each are within 
 						<code>Q.<a href="Q.html#.EPSILON">EPSILON</a></code>
 						then returns <code>true</code>, otherwise <code>false</code>.
+						Will return a <code>Boolean</code> value, 
+						thereby halting 
+						<a href="https://en.wikipedia.org/wiki/Fluent_interface" target="_blank">“Fluent interface” method chaining</a>
+						for this instance.
 					</dd>
 				</li>
 				<li>
 					<dt id=".toBlochSphere">toBlochSphere</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Expects a single <code>Q.Qubit</code> instance as argument.
+						<code class="value-type">Function( <a href="Q.html">Q</a>.Qubit ) ⇒ Object</code>
 						Returns the following object for a given qubit’s probability state,
 						useful for rendering a <a href="#Bloch_sphere">Bloch Sphere</a> representation.
 <pre><code>
@@ -745,7 +789,11 @@ var a = new <a href="Q.html">Q</a>.Qubit( 0, 1 )
 		z: vector.<strong>x</strong> <span class="comment">//  Note this X here.</span>
 	}
 }
-</code></pre>					
+</code></pre>
+						Will return a raw <code>Object</code> value, 
+						thereby halting 
+						<a href="https://en.wikipedia.org/wiki/Fluent_interface" target="_blank">“Fluent interface” method chaining</a>
+						for this instance.	
 					</dd>
 				</li>
 
