Added References section.

--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 				So why build Q?
 				The same reason Google, IBM, and Microsoft build quantum simulators:
 				to explore quantum circuit design using a cheap and easy medium before applying those designs to the real hardware.
-				Q was created by <a href="http://stewartsmith.io" target="_blank">Stewart Smith</a>, 
+				Q was started by me, <a href="http://stewartsmith.io" target="_blank">Stewart Smith</a>, 
 				in April 2019
 				as a way to learn about quantum computing, 
 				share that learning with others,
 				and do some actual quantum circuit programming.
 				Q’s source code—including this documentation—is available for download from GitHub at
 				<a href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>.
+				(Come join the fun!)
 				This documentation website is live at
 				<a href="https://stewdio.github.io/q.js">https://stewdio.github.io/q.js</a>,
 				which is probably where you’re viewing it from now, eh?
