--- a/References.html
+++ b/References.html
@@ -147,6 +147,7 @@
 
 			<h4>Quantum computation and quantum information (2000)</h4>
 			<p>
+				→ <a href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
 				This tome is credited to Michael Nielsen and 
 				Isaac Chuang—sometimes referred to as “Mike & Ike” for short. 
 				It is the must-have, foundational book for quantum computing.
