--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 				(Note those are backticks, not quotation marks.)
 			</p>
 <pre><code>
-<a href="Q.html">Q</a>`H-M`.<a href="Circuit.html#.prototype.run$">run$</a>().<a href="Circuit.html#.prototype.results">results</a>
+<a href="Q.html">Q</a>`H`.<a href="Circuit.html#.prototype.run$">run$</a>().<a href="Circuit.html#.prototype.try">try()</a>
 </code></pre>
 			<p>
 				Did you try it?
@@ -273,20 +273,26 @@
 				Q is a work-in-progress.
 				This documentation is still being written, as is the code it documents.
 				We’re laying railroad track directly in front of the train.
-				While
-				the <code><a href="Q.html">Q</a></code> object,
+				The <code><a href="Q.html">Q</a></code> object,
 				<code><a href="ComplexNumber.html">ComplexNumber</a></code>,
 				<code><a href="Matrix.html">Matrix</a></code>,
 				<code><a href="Qubit.html">Qubit</a></code>,
 				<code><a href="Gate.html">Gate</a></code>, 
-				and <code><a href="Circuit.html">Circuit</a></code> components are functional,
-				there are a lot of details to fill in.
-				(Stay tuned.)
-				Full functionality and a <a href="https://en.wikipedia.org/wiki/Graphical_user_interface" target="_blank">graphic user interface</a>—as an alternative to the console’s 
-				<a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank">commaind-line interface</a>—are coming!
-				<a href="https://en.wikipedia.org/wiki/WebGPU" target="_blank">WebGPU</a> for simulation is on our list!
-				Developing and maintaining a consistent tone-of-voice across documentation, code, and code comments is a never-ending marathon, but it’s worth it.
+				and <code><a href="Circuit.html">Circuit</a></code> components are fully functional as of November 2019.
+				The next 3 steps are as follows:
 			</p>
+			<p>
+				1. Finish the <a href="https://en.wikipedia.org/wiki/Graphical_user_interface" target="_blank">graphic user interface</a>—as an alternative to the console’s 
+				<a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank">commaind-line interface</a>.
+			</p>
+			<p>
+				2. Debug, streamline, and reduce the code footprint.
+			</p>
+			<p>
+				3. Push the computation to the GPU via
+				<a href="https://en.wikipedia.org/wiki/WebGPU" target="_blank">WebGPU</a>.
+			</p>
+			<br>
 			<p>
 				Want to get involved? 
 				Are you a quantum computation expert?
