--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 				(Note those are backticks, not quotation marks.)
 			</p>
 <pre><code>
-<a href="Q.html">Q</a>`H`.<a href="Circuit.html#.prototype.run$">run$</a>().<a href="Circuit.html#.prototype.try">try()</a>
+<a href="Q.html">Q</a>`H`.<a href="Circuit.html#.prototype.try$">try$</a>()
 </code></pre>
 			<p>
 				Did you try it?
