Some quick References updates.

--- a/References.html
+++ b/References.html
@@ -67,7 +67,7 @@
 
 			<h4>Dr. Talia Gershon explains quantum computing for WIRED (2018)</h4>
 			<p>
-				→ <a href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
+				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
 				Dr. Gershon is the director of research strategy and growth initiatives at IBM.
 				Here she not only expertly explains quantum computing
@@ -92,7 +92,7 @@
 				(2016)
 			</h4>
 			<p>
-				→ <a href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
+				<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
 				<br>
 				Cartoonist Zach Weinersmith teams up with Scott Aaronson, 
 				director of the <a href="http://www.cs.utexas.edu/~qic/" target="_blank">Quantum Information Center</a>
@@ -114,7 +114,7 @@
 				lecture for Microsoft Research (2018)
 			</h4>
 			<p>
-				→ <a href="https://youtu.be/F_Riqjdh2oM" target="_blank">https://youtu.be/F_Riqjdh2oM</a>
+				<a class="call-out" href="https://youtu.be/F_Riqjdh2oM" target="_blank">https://youtu.be/F_Riqjdh2oM</a>
 				<br>
 				Named after the book of the same title—a book 
 				Andrew reveres—this lecture explains qubits as matrices,
@@ -147,7 +147,8 @@
 
 			<h4>Quantum computation and quantum information (2000)</h4>
 			<p>
-				→ <a href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
+				<a class="call-out" href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
+				<br>
 				This tome is credited to Michael Nielsen and 
 				Isaac Chuang—sometimes referred to as “Mike & Ike” for short. 
 				It is the must-have, foundational book for quantum computing.
@@ -177,7 +178,7 @@
 			</h4>
 			<p>
 
-				→ <a href="https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product" target="_blank">https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product</a>
+				<a class="call-out" href="https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product" target="_blank">https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product</a>
 				<br>
 				Published just days after I began work on Q.js, 
 				this blog post by Gwilym Newton of IBM solved a problem I was banging my head against the wall over:
@@ -194,6 +195,37 @@
 				<a href="https://www.linkedin.com/in/gwilym-newton-91774659/" target="_blank">Gwilym Newton on LinkedIn</a><br>
 				<a href="https://twitter.com/Trevelyan_Panda" target="_blank">Gwilym Newton on Twitter</a>
 			</p>
+
+
+			<hr>
+			<h3>Q.js itself</h3>
+			<h4>GitHub repo</h4>
+			<p>
+				<a class="call-out" href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>
+				<br>
+				Q.js is open-source—and you can join in!
+				Download the code. Contribute to it. Fork it.
+				Because the repo <em>is</em> the documentation / examples / source
+				everything exists at this one location.
+			</p>
+			<h4>This documentation (GitHub pages)</h4>
+			<p>
+				<a class="call-out" href="https://stewdio.github.io/q.js" target="_blank">https://stewdio.github.io/q.js</a>
+				<br>
+				This very site that you are reading right now.
+			</p>
+			<h4>Twitter thread</h4>
+			<p>
+				<a class="call-out" href="https://twitter.com/stew_rtsmith/status/1123415441915957250" target="_blank">https://twitter.com/stew_rtsmith/status/1123415441915957250</a>
+				<br>
+				It all started with a clumsy ASCII diagram of a 
+				<a href="https://en.wikipedia.org/wiki/Hadamard_matrix" target="_blank">Hadamard matrix</a>
+				on 30 April 2019. 
+				From there the thread highlights the twists and turns of Q.js over time.
+				And I continue to update it ;) Let’s use the hashtag
+				<a href="https://twitter.com/hashtag/Qjs" target="_blank">#Qjs</a>.
+			</p>
+
 
 
 			<hr>
